--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <title>Document</title>
   <link rel="stylesheet" href="css/style.css">
   <script type="module" src="main.js"></script>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Orbitron&family=Roboto:wght@100&display=swap');
+  </style>
 </head>
 
 <body>
